// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Custom colors 1`] = `
HTMLCollection [
  <div
    class="svelte-kbw3ps"
    role="toolbar"
  >
    <button
      class="svelte-kbw3ps"
    />
    <button
      class="svelte-kbw3ps"
      style="--background: #e879f9;"
    />
    <button
      class="svelte-kbw3ps"
      style="--background: rgba(150, 75, 50, 0.5);"
    />
    <button
      class="svelte-kbw3ps"
      style="--background: linear-gradient(to right, red, orange);"
    />
  </div>,
  <span
    class="svelte-178aoja"
  />,
]
`;

exports[`Default colors 1`] = `
HTMLCollection [
  <div
    class="svelte-kbw3ps"
    role="toolbar"
  >
    <button
      class="svelte-kbw3ps"
    />
    <button
      class="svelte-kbw3ps"
      style="--background: white;"
    />
    <button
      class="svelte-kbw3ps"
      style="--background: #e0e0e0;"
    />
    <button
      class="svelte-kbw3ps"
      style="--background: #a0a0a0;"
    />
    <button
      class="svelte-kbw3ps"
      style="--background: black;"
    />
  </div>,
  <span
    class="svelte-178aoja"
  />,
]
`;
